--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
 <body class="d-flex h-100 text-center" style="height:100vh !important;
-        background-image: url('https://www.img.in.th/images/7b880f58384e9c4a2fa7e255b4e78e77.gif');
+        background-image: url('hhttps://imgz.io/images/2022/02/27/269600775_1055972834963682_6432186975220028403_n.jpg');
         /* background: linear-gradient(to bottom,#51010a 40%,#55000a 80%); */
         background-repeat: no-repeat;
         background-size: cover;
@@ -29,9 +29,9 @@
     <main class="card-columns mx-auto d-flex justify-content-center col-12 col-sm-6">
       <div class="card" style="background: rgb(0 0 0 / 0%);margin-top: 0px;border: 0px;border-radius: 15px;">
         <div class="card-body p-3 p-sm-4">
-          <!--img src="https://sv1.picz.in.th/images/2022/02/16/r94dUu.jpg" class="img-fluid" style="width: 50%;"-->
+          <!--img src="https://imgz.io/images/2022/02/27/273907560_372981734278998_9080297182256639157_nb890c6719602d636.png" class="img-fluid" style="width: 50%;"-->
           <!--ส่วนรูปโปรโมชั่น และ ลิ้งออกจากรูปภาพ-->
-          <img src="https://sv1.picz.in.th/images/2022/02/16/r94dUu.jpg" class="img-fluid" style="width: 450px;border-radius: 15px;">
+          <img src="https://imgz.io/images/2022/02/27/273907560_372981734278998_9080297182256639157_nb890c6719602d636.png" class="img-fluid" style="width: 450px;border-radius: 15px;">
           
           <p class="lead mb-4 mt-3" style="font-family: 'Kanit', sans-serif;font-size: 28px;font-weight: 500;">แชร์ให้เพื่อน</p>
           <div class="d-grid gap-2 col-10 mx-auto">
