--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
 <body class="d-flex h-100 text-center" style="height:100vh !important;
-        background-image: url('hhttps://imgz.io/images/2022/02/27/269600775_1055972834963682_6432186975220028403_n.jpg');
+        background-image: url('https://imgz.io/images/2022/02/27/269600775_1055972834963682_6432186975220028403_n.jpg');
         /* background: linear-gradient(to bottom,#51010a 40%,#55000a 80%); */
         background-repeat: no-repeat;
         background-size: cover;
