--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             "action": {
               "type": "uri",
               "label": "แชร์ให้เพื่อน",
-              "uri": "https://liff.line.me/1656889187-Dk0AAkxL"
+              "uri": "https://liff.line.me/1656928644-nzkQ36Yv"
             },
             "style": "primary",
             "height": "sm",
@@ -186,7 +186,7 @@
             "action": {
               "type": "uri",
               "label": "แชร์ให้เพื่อน",
-              "uri": "https://liff.line.me/1656889187-Dk0AAkxL"
+              "uri": "https://liff.line.me/1656928644-nzkQ36Yv"
             },
             "color": "#3333CC",
             "height": "sm",
