--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <!--ส่วนรูปโปรโมชั่น และ ลิ้งออกจากรูปภาพ-->
           <img src="https://imgz.io/images/2022/02/27/273907560_372981734278998_9080297182256639157_nb890c6719602d636.png" class="img-fluid" style="width: 450px;border-radius: 15px;">
           
-          <p class="lead mb-4 mt-3" style="font-family: 'Kanit', sans-serif;font-size: 28px;font-blue: 500;">แชร์ให้เพื่อน</p>
+          <p class="lead mb-4 mt-3" style="font-family: 'Kanit', sans-serif;font-size: 28px;font-black: 500;">แชร์กิจกรรมไปยังกลุ่มต่างๆหรือเพื่อนของท่าน</p>
           <div class="d-grid gap-2 col-10 mx-auto">
             <button class="btn btn-primary btn-lg text-nowrap mb-2" id="btnShare" onclick="sendShare()" style="font-family: 'Kanit', sans-serif;">เเชร์เลย</button>
           </div>
